--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -690,16 +690,16 @@
       "\n",
       "\n",
       "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0015 seconds\n",
-      "Made predictions in 0.0009 seconds.\n",
-      "F1 score for training set: 0.8591.\n",
+      "Trained model in 0.0020 seconds\n",
       "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 0.8591.\n",
+      "Made predictions in 0.0011 seconds.\n",
       "F1 score for test set: 0.7838.\n",
       "Training a RandomForestClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0250 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Trained model in 0.0226 seconds\n",
+      "Made predictions in 0.0009 seconds.\n",
       "F1 score for training set: 0.9844.\n",
-      "Made predictions in 0.0008 seconds.\n",
+      "Made predictions in 0.0009 seconds.\n",
       "F1 score for test set: 0.7669.\n",
       "Training a GaussianNB using a training set size of 100. . .\n",
       "Trained model in 0.0006 seconds\n",
@@ -710,16 +710,16 @@
       "\n",
       "\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0027 seconds\n",
+      "Trained model in 0.0026 seconds\n",
       "Made predictions in 0.0019 seconds.\n",
       "F1 score for training set: 0.8693.\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Made predictions in 0.0012 seconds.\n",
       "F1 score for test set: 0.7755.\n",
       "Training a RandomForestClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0214 seconds\n",
-      "Made predictions in 0.0011 seconds.\n",
+      "Trained model in 0.0229 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 0.9924.\n",
-      "Made predictions in 0.0008 seconds.\n",
+      "Made predictions in 0.0009 seconds.\n",
       "F1 score for test set: 0.7153.\n",
       "Training a GaussianNB using a training set size of 200. . .\n",
       "Trained model in 0.0007 seconds\n",
@@ -730,22 +730,22 @@
       "\n",
       "\n",
       "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0076 seconds\n",
-      "Made predictions in 0.0043 seconds.\n",
+      "Trained model in 0.0056 seconds\n",
+      "Made predictions in 0.0038 seconds.\n",
       "F1 score for training set: 0.8692.\n",
       "Made predictions in 0.0013 seconds.\n",
       "F1 score for test set: 0.7586.\n",
       "Training a RandomForestClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0225 seconds\n",
-      "Made predictions in 0.0014 seconds.\n",
+      "Trained model in 0.0244 seconds\n",
+      "Made predictions in 0.0016 seconds.\n",
       "F1 score for training set: 0.9976.\n",
-      "Made predictions in 0.0008 seconds.\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for test set: 0.7727.\n",
       "Training a GaussianNB using a training set size of 300. . .\n",
-      "Trained model in 0.0008 seconds\n",
+      "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0004 seconds.\n",
       "F1 score for training set: 0.8088.\n",
-      "Made predictions in 0.0002 seconds.\n",
+      "Made predictions in 0.0008 seconds.\n",
       "F1 score for test set: 0.7500.\n"
      ]
     }
@@ -829,7 +829,7 @@
    "source": [
     "**Answer: ** Based on available data, limited resources, cost, and performance, the Random Forest (RF) method appears to be the most appropriate. While it relatively more costly to train, by approximately 10x ~ 100x over the other two methods, at ~0.02s, for any training set size, this disadvantage is of little concern (especially considering that it remains roughly constant, regardless of training dataset size). Also, prediction time was blazing fast at ~0.0007s. Although all three classifiers demonstrated F1 accuracy near 75%, RF had F1 train scores of nearly unity. The larger disparity between F1 train and test scores seen for the RF method suggests that it was overfitting the data and can be properly tuned to decrease such high variance.\n",
     "\n",
-    "The RF method can also identify the features most strongly associated with students' failure, which may allow school administrators to focus on proactive measures as well. Moreover, RFs are easier to explain to the general public, as decision trees, which are central to RFs, are quite intuitive."
+    "Although beyond the scope of this project, the RF method can also identify the features most strongly associated with students' failure, which may allow school administrators to focus on proactive measures as well. Moreover, RFs are easier to explain to the general public, as decision trees, which are central to RFs, are quite intuitive."
    ]
   },
   {
@@ -844,7 +844,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: ** We have been able to leverage past student data, including attributes (e.g., gender, age, familial size, alcohol consumption) and performance (i.e., pass/fail final exam), to develop an algorithm that is able to classify _future_ student failure/pass behavior for the high school final exam.\n",
+    "\n",
+    "Using 300 previous observations, i.e., data from 300 students, including both attributes and performance, we were able to create a random forest model -- which sounds complicated, but isn't! First, it is helpful to understand that a random forest model is composed of decision trees -- the same kind of decision trees that your brain is creating and using every moment of each day. For example, when you start your day and decide if you should grab a coat, your mind may first ask: _will the temperature remain above 72F_? If yes, then secondly it may ask, _is rain in the forecast_? Maybe, if it's above 72F and sunny, then your brain will forego the coat. However, had it been less than 72F or rainy, then a coat would have accompanied your day. \n",
+    "\n",
+    "A random forest model employs a similar approach, first creating a tree-at-a-time. In general, to create a tree from these variables, it attempts to find features (sunny/rainy, temperature) that nicely divides the population. Essentially, it's using a divide and conquer approach, so if previous observations were all sunny, but had a good mix of temperature ranges, it would first use temperature to subdivide the population into smaller groups. This process of tree building is generally continued until the the tree's _leafs_ reach desireablly small groups, or until the number of features are all used. When the tree is complete, the leafs that contain observations are labelled according to the majority label (pass or fail). For example, if a leaf at the end of a tree contains 10 students that have passed, but 3 that have failed, it will label this \"bucket\" as \"pass\", such that when a future prediction occurs for another student that leads them into the same bucket, the model will return predict a \"pass\" as well. \n",
+    "\n",
+    "However, the problem creating a single tree is that it could have built a model that was _too_ specific to the training observations (we call this _overfitting_). To help the model _generalize_ such that it'll perform well on future _unseen_ data, the random forest method builds _many_ trees and \"averages\" the results to better generalize to future data."
    ]
   },
   {
@@ -865,47 +871,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'best_estimator_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-f8de40c85d5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;31m# Get the estimator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgrid_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_estimator_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;31m# Report the final F1 score for training and testing after parameter tuning\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'best_estimator_'"
+     "data": {
+      "text/plain": [
+       "{'criterion': 'gini', 'max_depth': 6, 'max_features': 7, 'n_estimators': 13}"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_obj.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_features': 7, 'n_estimators': 13, 'criterion': 'gini', 'max_depth': 6}\n",
+      "0.822971961345\n",
+      "Made predictions in 0.0013 seconds.\n",
+      "Tuned model has a training F1 score of 0.9031.\n",
+      "Made predictions in 0.0009 seconds.\n",
+      "Tuned model has a testing F1 score of 0.8058.\n"
      ]
     }
    ],
    "source": [
-    "# TODO: Import 'GridSearchCV' and 'make_scorer'\n",
+    "# Import 'GridSearchCV' and 'make_scorer'\n",
+    "from sklearn.grid_search import GridSearchCV\n",
+    "from sklearn.metrics import make_scorer\n",
     "\n",
-    "# TODO: Create the parameters list you wish to tune\n",
-    "parameters = None\n",
+    "# Create the parameters list you wish to tune\n",
+    "parameters = [{\n",
+    "    \"criterion\": [\"gini\",\"entropy\"],\n",
+    "    \"max_depth\": np.arange(4,8,2),\n",
+    "    \"max_features\": np.arange(5,9,2),\n",
+    "    \"n_estimators\": np.arange(11,15,2)\n",
+    "}]\n",
     "\n",
-    "# TODO: Initialize the classifier\n",
-    "clf = None\n",
+    "# Initialize the classifier\n",
+    "seed = 1\n",
+    "clf = RandomForestClassifier(random_state=seed, n_jobs=1)\n",
     "\n",
-    "# TODO: Make an f1 scoring function using 'make_scorer' \n",
-    "f1_scorer = None\n",
+    "# Make an f1 scoring function using 'make_scorer' \n",
+    "f1_scorer = make_scorer(f1_score, pos_label=\"yes\")\n",
     "\n",
-    "# TODO: Perform grid search on the classifier using the f1_scorer as the scoring method\n",
-    "grid_obj = None\n",
+    "# Perform grid search on the classifier using the f1_scorer as the scoring method\n",
+    "grid_obj = GridSearchCV(clf, parameters, scoring=f1_scorer)\n",
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
-    "grid_obj = None\n",
+    "grid_obj.fit(X_train, y_train)\n",
     "\n",
     "# Get the estimator\n",
     "clf = grid_obj.best_estimator_\n",
+    "print grid_obj.best_params_\n",
+    "print grid_obj.best_score_\n",
     "\n",
     "# Report the final F1 score for training and testing after parameter tuning\n",
     "print \"Tuned model has a training F1 score of {:.4f}.\".format(predict_labels(clf, X_train, y_train))\n",
     "print \"Tuned model has a testing F1 score of {:.4f}.\".format(predict_labels(clf, X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Made predictions in 0.0010 seconds.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.76388888888888884"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf2 = RandomForestClassifier(random_state=seed, n_jobs=1,max_features=6,n_estimators=11,max_depth=6)\n",
+    "clf2.fit(X_train,y_train)\n",
+    "predict_labels(clf2, X_test, y_test)"
    ]
   },
   {
