--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -690,62 +690,62 @@
       "\n",
       "\n",
       "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0020 seconds\n",
+      "Trained model in 0.0035 seconds\n",
       "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 0.8591.\n",
-      "Made predictions in 0.0011 seconds.\n",
+      "Made predictions in 0.0006 seconds.\n",
       "F1 score for test set: 0.7838.\n",
       "Training a RandomForestClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0226 seconds\n",
-      "Made predictions in 0.0009 seconds.\n",
+      "Trained model in 0.0221 seconds\n",
+      "Made predictions in 0.0012 seconds.\n",
       "F1 score for training set: 0.9844.\n",
-      "Made predictions in 0.0009 seconds.\n",
+      "Made predictions in 0.0008 seconds.\n",
       "F1 score for test set: 0.7669.\n",
       "Training a GaussianNB using a training set size of 100. . .\n",
       "Trained model in 0.0006 seconds\n",
       "Made predictions in 0.0003 seconds.\n",
       "F1 score for training set: 0.8550.\n",
-      "Made predictions in 0.0002 seconds.\n",
+      "Made predictions in 0.0003 seconds.\n",
       "F1 score for test set: 0.7481.\n",
       "\n",
       "\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0026 seconds\n",
-      "Made predictions in 0.0019 seconds.\n",
+      "Trained model in 0.0032 seconds\n",
+      "Made predictions in 0.0023 seconds.\n",
       "F1 score for training set: 0.8693.\n",
-      "Made predictions in 0.0012 seconds.\n",
+      "Made predictions in 0.0009 seconds.\n",
       "F1 score for test set: 0.7755.\n",
       "Training a RandomForestClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0229 seconds\n",
+      "Trained model in 0.0211 seconds\n",
       "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 0.9924.\n",
       "Made predictions in 0.0009 seconds.\n",
       "F1 score for test set: 0.7153.\n",
       "Training a GaussianNB using a training set size of 200. . .\n",
-      "Trained model in 0.0007 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Trained model in 0.0008 seconds\n",
+      "Made predictions in 0.0004 seconds.\n",
       "F1 score for training set: 0.8321.\n",
       "Made predictions in 0.0002 seconds.\n",
       "F1 score for test set: 0.7132.\n",
       "\n",
       "\n",
       "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0056 seconds\n",
-      "Made predictions in 0.0038 seconds.\n",
+      "Trained model in 0.0050 seconds\n",
+      "Made predictions in 0.0036 seconds.\n",
       "F1 score for training set: 0.8692.\n",
       "Made predictions in 0.0013 seconds.\n",
       "F1 score for test set: 0.7586.\n",
       "Training a RandomForestClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0244 seconds\n",
-      "Made predictions in 0.0016 seconds.\n",
+      "Trained model in 0.0220 seconds\n",
+      "Made predictions in 0.0012 seconds.\n",
       "F1 score for training set: 0.9976.\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Made predictions in 0.0008 seconds.\n",
       "F1 score for test set: 0.7727.\n",
       "Training a GaussianNB using a training set size of 300. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0007 seconds\n",
       "Made predictions in 0.0004 seconds.\n",
       "F1 score for training set: 0.8088.\n",
-      "Made predictions in 0.0008 seconds.\n",
+      "Made predictions in 0.0003 seconds.\n",
       "F1 score for test set: 0.7500.\n"
      ]
     }
@@ -827,7 +827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** Based on available data, limited resources, cost, and performance, the Random Forest (RF) method appears to be the most appropriate. While it relatively more costly to train, by approximately 10x ~ 100x over the other two methods, at ~0.02s, for any training set size, this disadvantage is of little concern (especially considering that it remains roughly constant, regardless of training dataset size). Also, prediction time was blazing fast at ~0.0007s. Although all three classifiers demonstrated F1 accuracy near 75%, RF had F1 train scores of nearly unity. The larger disparity between F1 train and test scores seen for the RF method suggests that it was overfitting the data and can be properly tuned to decrease such high variance.\n",
+    "**Answer: ** Based on available data, limited resources, cost, and performance, the Random Forest (RF) method appears to be the most appropriate. While it relatively more costly to train, by approximately 10x ~ 100x over the other two methods, at ~0.02s, for any training set size, this disadvantage is of little concern (especially considering that it remains roughly constant, regardless of training dataset size). Also, prediction time was blazing fast at ~0.0007s. Although all three classifiers demonstrated F1 accuracy near 75%, RF had F1 train scores of nearly unity. The larger disparity between F1 train and test scores seen for the RF method possibly suggests that it was overfitting the data and can be tuned to decrease such high variance.\n",
     "\n",
     "Although beyond the scope of this project, the RF method can also identify the features most strongly associated with students' failure, which may allow school administrators to focus on proactive measures as well. Moreover, RFs are easier to explain to the general public, as decision trees, which are central to RFs, are quite intuitive."
    ]
@@ -846,9 +846,9 @@
    "source": [
     "**Answer: ** We have been able to leverage past student data, including attributes (e.g., gender, age, familial size, alcohol consumption) and performance (i.e., pass/fail final exam), to develop an algorithm that is able to classify _future_ student failure/pass behavior for the high school final exam.\n",
     "\n",
-    "Using 300 previous observations, i.e., data from 300 students, including both attributes and performance, we were able to create a random forest model -- which sounds complicated, but isn't! First, it is helpful to understand that a random forest model is composed of decision trees -- the same kind of decision trees that your brain is creating and using every moment of each day. For example, when you start your day and decide if you should grab a coat, your mind may first ask: _will the temperature remain above 72F_? If yes, then secondly it may ask, _is rain in the forecast_? Maybe, if it's above 72F and sunny, then your brain will forego the coat. However, had it been less than 72F or rainy, then a coat would have accompanied your day. \n",
+    "Using 300 previous observations, i.e., data from 300 students, including both attributes and performance, we were able to create a random forest model -- which sounds complicated, but isn't! First, it is helpful to understand that a random forest model is composed of decision trees -- the same kind of decision trees that your brain is creating and invoking every moment of each day. For example, when you start your day and decide if you should grab a coat, your mind may first ask: _will the temperature remain above 72F_? If yes, then secondly it may ask, _is rain in the forecast_? Maybe, if it's above 72F and sunny, then your brain will forego the coat. However, had it been less than 72F or rainy, then a coat would have accompanied your day. This process of leveraging two _features_, e.g., temperature, running a logical evaluation process, e.g., is it greater than 72F, and returning a result, e.g., grab a coat, is just one example of how our brains use decision trees daily.\n",
     "\n",
-    "A random forest model employs a similar approach, first creating a tree-at-a-time. In general, to create a tree from these variables, it attempts to find features (sunny/rainy, temperature) that nicely divides the population. Essentially, it's using a divide and conquer approach, so if previous observations were all sunny, but had a good mix of temperature ranges, it would first use temperature to subdivide the population into smaller groups. This process of tree building is generally continued until the the tree's _leafs_ reach desireablly small groups, or until the number of features are all used. When the tree is complete, the leafs that contain observations are labelled according to the majority label (pass or fail). For example, if a leaf at the end of a tree contains 10 students that have passed, but 3 that have failed, it will label this \"bucket\" as \"pass\", such that when a future prediction occurs for another student that leads them into the same bucket, the model will return predict a \"pass\" as well. \n",
+    "A random forest model employs a similar approach, first creating a tree-at-a-time. In general, to create a tree from these variables, it attempts to find features (sunny/rainy, temperature) that divides the population into roughly equivalent samples. Essentially, it uses a divide and conquer approach, so if previous observations were all sunny, but had a good mix of temperature ranges, it would first use temperature to subdivide the population into smaller groups. This process of tree building is generally continued until the the tree's _leafs_ reach desireablly small groups, or until all features are used. When the tree is complete, the leafs that contain observations are labelled according to the majority label (pass or fail). For example, if a leaf at the end of a tree contains 10 students that have passed, but 3 that have failed, it will label this \"bucket\" as \"pass\", such that when a future prediction occurs for another student that leads them into the same bucket, the model will return predict a \"pass\" as well. \n",
     "\n",
     "However, the problem creating a single tree is that it could have built a model that was _too_ specific to the training observations (we call this _overfitting_). To help the model _generalize_ such that it'll perform well on future _unseen_ data, the random forest method builds _many_ trees and \"averages\" the results to better generalize to future data."
    ]
@@ -871,20 +871,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'criterion': 'gini', 'max_depth': 6, 'max_features': 7, 'n_estimators': 13}"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'grid_obj' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-ea59d81abfc7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgrid_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_params_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'grid_obj' is not defined"
+     ]
     }
    ],
    "source": [
@@ -893,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -904,7 +905,7 @@
      "text": [
       "{'max_features': 7, 'n_estimators': 13, 'criterion': 'gini', 'max_depth': 6}\n",
       "0.822971961345\n",
-      "Made predictions in 0.0013 seconds.\n",
+      "Made predictions in 0.0012 seconds.\n",
       "Tuned model has a training F1 score of 0.9031.\n",
       "Made predictions in 0.0009 seconds.\n",
       "Tuned model has a testing F1 score of 0.8058.\n"
@@ -948,37 +949,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Made predictions in 0.0010 seconds.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.76388888888888884"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf2 = RandomForestClassifier(random_state=seed, n_jobs=1,max_features=6,n_estimators=11,max_depth=6)\n",
-    "clf2.fit(X_train,y_train)\n",
-    "predict_labels(clf2, X_test, y_test)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -990,7 +960,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: ** A handful of numerical experiments demonstrated some rather interesting results. \n",
+    "\n",
+    "Four variables were considered: criterion, max\\_depth, max\\_features, and n\\_estimators. An iterative [mutltigrid-like](https://en.wikipedia.org/wiki/Multigrid_method) approach was employed, first beginning with large coarse grids, and slowly switching to smaller, finer grids, once appropriate ranges for each variable were empirically determined. This was done to lessen the overall compuational burden of the grid search method.\n",
+    "\n",
+    "Using step sizes of 1, the following parametrized values were found to be optimal, according to the grid search:\n",
+    "{'max_features': 6, 'n_estimators': 11, 'criterion': 'gini', 'max_depth': 6}\n",
+    "This resulted in a grid search score of 0.83, but when these parameters were used to create the 'tuned' model, the F1 training and test scores were 0.9095 and 0.7639. Unexpectedly, the test score was slightly less than the 'untuned' model test score. \n",
+    "\n",
+    "Inquisitive, upon reverting back to step sizes of 2, the following parametrized values were found to be optimal:\n",
+    "{'max_features': 7, 'n_estimators': 13, 'criterion': 'gini', 'max_depth': 6}\n",
+    "Here, the difference being that _max_features_ was bumped from 6 to 7. As expected, reducing the resolution obtainable by the grid search, the resulting score also reduced -- slightly from 0.83 to 0.8229. However, by under optimizing the grid search result, these new parameters created 'tuned' model F1 train and test scores of 0.9031 and 0.8058. \n",
+    "\n",
+    "Fascinating! \n",
+    "\n",
+    "There are two things likely at play here. First, is that the grid search metric for optimal parameters and the test set metric are dissimilar. The grid search metric is using a k-fold cross validation style on training data, while the test metric is computing an F1 score for a test set. Since the populations and methodologies are different, we'd not to surprised by these dissimilar results. Additionally, the small sample size is likely also reducing the model's ability to generalize. Perhaps, had more observations been available, these differences would become less significant. "
    ]
   },
   {
