--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -98,7 +98,7 @@
       "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
-      "Graduation rate of the class: 0.67%\n"
+      "Graduation rate of the class: 67.09%\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
     "n_failed = student_data.loc[student_data[\"passed\"]==\"no\"].shape[0]\n",
     "\n",
     "# graduation rate\n",
-    "grad_rate = float(n_passed) / n_students\n",
+    "grad_rate = float(n_passed) / n_students * 100\n",
     "\n",
     "# Print the results\n",
     "print \"Total number of students: {}\".format(n_students)\n",
@@ -690,60 +690,60 @@
       "\n",
       "\n",
       "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0035 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Trained model in 0.0018 seconds\n",
+      "Made predictions in 0.0007 seconds.\n",
       "F1 score for training set: 0.8591.\n",
       "Made predictions in 0.0006 seconds.\n",
       "F1 score for test set: 0.7838.\n",
       "Training a RandomForestClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0221 seconds\n",
-      "Made predictions in 0.0012 seconds.\n",
+      "Trained model in 0.0229 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 0.9844.\n",
-      "Made predictions in 0.0008 seconds.\n",
+      "Made predictions in 0.0007 seconds.\n",
       "F1 score for test set: 0.7669.\n",
       "Training a GaussianNB using a training set size of 100. . .\n",
       "Trained model in 0.0006 seconds\n",
       "Made predictions in 0.0003 seconds.\n",
       "F1 score for training set: 0.8550.\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Made predictions in 0.0002 seconds.\n",
       "F1 score for test set: 0.7481.\n",
       "\n",
       "\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0032 seconds\n",
-      "Made predictions in 0.0023 seconds.\n",
+      "Trained model in 0.0027 seconds\n",
+      "Made predictions in 0.0020 seconds.\n",
       "F1 score for training set: 0.8693.\n",
-      "Made predictions in 0.0009 seconds.\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for test set: 0.7755.\n",
       "Training a RandomForestClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0211 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Trained model in 0.0219 seconds\n",
+      "Made predictions in 0.0011 seconds.\n",
       "F1 score for training set: 0.9924.\n",
-      "Made predictions in 0.0009 seconds.\n",
+      "Made predictions in 0.0007 seconds.\n",
       "F1 score for test set: 0.7153.\n",
       "Training a GaussianNB using a training set size of 200. . .\n",
-      "Trained model in 0.0008 seconds\n",
-      "Made predictions in 0.0004 seconds.\n",
+      "Trained model in 0.0007 seconds\n",
+      "Made predictions in 0.0003 seconds.\n",
       "F1 score for training set: 0.8321.\n",
-      "Made predictions in 0.0002 seconds.\n",
+      "Made predictions in 0.0005 seconds.\n",
       "F1 score for test set: 0.7132.\n",
       "\n",
       "\n",
       "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0050 seconds\n",
-      "Made predictions in 0.0036 seconds.\n",
+      "Trained model in 0.0055 seconds\n",
+      "Made predictions in 0.0037 seconds.\n",
       "F1 score for training set: 0.8692.\n",
       "Made predictions in 0.0013 seconds.\n",
       "F1 score for test set: 0.7586.\n",
       "Training a RandomForestClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0220 seconds\n",
-      "Made predictions in 0.0012 seconds.\n",
+      "Trained model in 0.0244 seconds\n",
+      "Made predictions in 0.0013 seconds.\n",
       "F1 score for training set: 0.9976.\n",
       "Made predictions in 0.0008 seconds.\n",
       "F1 score for test set: 0.7727.\n",
       "Training a GaussianNB using a training set size of 300. . .\n",
-      "Trained model in 0.0007 seconds\n",
-      "Made predictions in 0.0004 seconds.\n",
+      "Trained model in 0.0008 seconds\n",
+      "Made predictions in 0.0003 seconds.\n",
       "F1 score for training set: 0.8088.\n",
       "Made predictions in 0.0003 seconds.\n",
       "F1 score for test set: 0.7500.\n"
@@ -877,37 +877,14 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'grid_obj' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-ea59d81abfc7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgrid_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_params_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'grid_obj' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "grid_obj.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{'max_features': 7, 'n_estimators': 13, 'criterion': 'gini', 'max_depth': 6}\n",
       "0.822971961345\n",
-      "Made predictions in 0.0012 seconds.\n",
+      "Made predictions in 0.0014 seconds.\n",
       "Tuned model has a training F1 score of 0.9031.\n",
-      "Made predictions in 0.0009 seconds.\n",
+      "Made predictions in 0.0010 seconds.\n",
       "Tuned model has a testing F1 score of 0.8058.\n"
      ]
     }
